<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="passoword">Passoword</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="welcome_user">Welcome User</string>
</resources>
